--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
     "expo-splash-screen": "~0.29.18",
@@ -33,6 +34,8 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "lottie-react-native": "^7.1.0",
+    "moti": "^0.29.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
