--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "lottie-react-native": "^7.1.0",
+    "lucide-react-native": "^0.468.0",
     "moti": "^0.29.0",
     "nativewind": "^4.1.23",
+    "openai": "^4.76.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.0",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "^3.16.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.0.0",
