--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "lottie-react-native": "^7.1.0",
@@ -49,6 +50,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-purchases": "^8.5.0",
+    "react-native-purchases-ui": "^8.5.0",
     "react-native-reanimated": "^3.16.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.0.0",
