--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/splash-icon.png",
-      "resizeMode": "cover",
+      "resizeMode": "contain",
       "backgroundColor": "#000"
     },
     "scheme": "healthchat",
@@ -25,7 +25,7 @@
       },
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#000"
+        "backgroundColor": "#fff"
       },
       "package": "com.healthchatdev.HealthChat"
     },
@@ -40,7 +40,7 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "resizeMode": "cover",
+          "resizeMode": "contain",
           "backgroundColor": "#000"
         }
       ],
@@ -57,13 +57,10 @@
             "provisional": true
           },
           "sound": true,
-          "sounds": [
-            "./assets/sounds/notification1.wav",
-            "./assets/sounds/notification1.wav"
-          ],
+          "sounds": ["./assets/sounds/notification1.wav"],
           "androidMode": "default",
           "androidChannelId": "default",
-          "androidChannelName": "default"
+          "androidChannelName": "Default Channel"
         }
       ]
     ],
