--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,12 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "eric141423@gmail.com",
+        "ascAppId": "6739962453",
+        "appleTeamId": "P96M2P3U58"
+      }
+    }
   }
 }
