--- a/app.json
+++ b/app.json
@@ -10,14 +10,15 @@
       "resizeMode": "cover",
       "backgroundColor": "#000"
     },
-    "scheme": "HealthChat",
+    "scheme": "healthchat",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.shebl.HealthChat"
+      "bundleIdentifier": "com.healthchatdev.HealthChat"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "versionCode": 2,
       "splash": {
         "foregroundImage": "./assets/images/splash-icon.png",
@@ -29,8 +30,7 @@
         "resizeMode": "cover",
         "backgroundColor": "#000"
       },
-      "googleServicesFile": "./google-services.json",
-      "package": "com.shebl.HealthChat"
+      "package": "com.healthchatdev.HealthChat"
     },
     "web": {
       "bundler": "metro",
@@ -53,7 +53,11 @@
           "icon": "./assets/images/icon.png",
           "color": "#ffffff",
           "userInterfaceStyle": "automatic",
-          "permissions": ["alert", "badge", "notification"],
+          "permissions": [
+            "alert",
+            "badge",
+            "notification"
+          ],
           "permissionsAlwaysAsk": {
             "alert": true,
             "badge": true,
@@ -61,7 +65,9 @@
             "provisional": true
           },
           "sound": true,
-          "sounds": ["./assets/sounds/notification1.wav"],
+          "sounds": [
+            "./assets/sounds/notification1.wav"
+          ],
           "androidMode": "default",
           "androidChannelId": "default",
           "androidChannelName": "default"
@@ -76,8 +82,15 @@
         "origin": false
       },
       "eas": {
-        "projectId": "72fd329a-362e-4f69-86e7-43ed282749fa"
+        "projectId": "f7838caa-f9c6-4831-b8b9-939bb08bdd7a"
       }
+    },
+    "owner": "healthchat-dev",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f7838caa-f9c6-4831-b8b9-939bb08bdd7a"
     }
   }
 }
