--- a/app.json
+++ b/app.json
@@ -21,11 +21,13 @@
       "googleServicesFile": "./google-services.json",
       "versionCode": 2,
       "splash": {
-        "foregroundImage": "./assets/images/splash-icon.png"
+        "foregroundImage": "./assets/images/splash-icon.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#000"
       },
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#fff"
+        "backgroundColor": "#000"
       },
       "package": "com.healthchatdev.HealthChat"
     },
