--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-linking": "~7.0.3",
     "expo-notifications": "^0.29.11",
     "expo-router": "4.0.11",
+    "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
