--- a/app.json
+++ b/app.json
@@ -20,6 +20,11 @@
         "googleSignIn": {
           "reservedClientId": "703134724815-he6bcu5nm6jlfpatdrv2aofse4ocqlhq.apps.googleusercontent.com"
         }
+      },
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs access to location services to find medical specialists near you.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs access to location services to find medical specialists near you.",
+        "NSLocationAlwaysUsageDescription": "This app needs access to location services to find medical specialists near you."
       }
     },
     "android": {
