--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.5",
     "expo-notifications": "^0.29.11",
     "expo-router": "4.0.11",
     "expo-speech": "~13.0.0",
@@ -41,6 +42,7 @@
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "geofire-common": "^6.0.0",
     "lottie-react-native": "^7.1.0",
     "lucide-react-native": "^0.468.0",
     "moti": "^0.29.0",
