--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.18",
+    "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "^17.0.3",
