--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.18",
+    "expo-apple-authentication": "~7.1.3",
+    "expo-auth-session": "~6.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "^17.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.6",
     "expo-device": "^7.0.1",
     "expo-font": "~13.0.1",
