--- a/app.json
+++ b/app.json
@@ -66,7 +66,11 @@
         {
           "icon": "./assets/images/icon-app.png",
           "userInterfaceStyle": "automatic",
-          "permissions": ["alert", "badge", "notification"],
+          "permissions": [
+            "alert",
+            "badge",
+            "notification"
+          ],
           "permissionsAlwaysAsk": {
             "alert": true,
             "badge": true,
@@ -74,12 +78,15 @@
             "provisional": true
           },
           "sound": true,
-          "sounds": ["./assets/sounds/notification1.wav"],
+          "sounds": [
+            "./assets/sounds/notification1.wav"
+          ],
           "androidMode": "default",
           "androidChannelId": "default",
           "androidChannelName": "Default Channel"
         }
-      ]
+      ],
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true
