--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@types/i18next": "^12.1.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.1",
@@ -33,6 +35,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-localization": "^16.0.1",
     "expo-location": "~18.0.5",
     "expo-notifications": "^0.29.11",
     "expo-router": "4.0.11",
@@ -42,9 +45,11 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
+    "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "geofire-common": "^6.0.0",
+    "i18next": "^24.2.1",
     "lottie-react-native": "^7.1.0",
     "lucide-react-native": "^0.468.0",
     "moti": "^0.29.0",
@@ -53,7 +58,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.0",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
+    "react-native-base64": "^0.2.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
@@ -63,6 +70,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "~4.1.0",
+    "react-native-video": "^6.9.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.16",
