--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.18",
@@ -54,6 +55,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-picker": "^4.3.7",
     "react-native-purchases": "^8.5.0",
     "react-native-purchases-ui": "^8.5.0",
     "react-native-reanimated": "^3.16.5",
