--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "i18next": "^24.2.2",
     "lottie-react-native": "^7.1.0",
     "lucide-react-native": "^0.468.0",
     "moti": "^0.29.0",
@@ -51,6 +52,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.0",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
