--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~52.0.18",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.2",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
