--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
     "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-purchases": "^8.5.0",
     "react-native-purchases-ui": "^8.5.0",
-    "react-native-reanimated": "^3.16.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "~4.1.0",
