--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.8.4",
     "expo-server-sdk": "^3.13.0",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
