--- a/app.json
+++ b/app.json
@@ -49,7 +49,11 @@
         {
           "icon": "./assets/images/icon-app.png",
           "userInterfaceStyle": "automatic",
-          "permissions": ["alert", "badge", "notification"],
+          "permissions": [
+            "alert",
+            "badge",
+            "notification"
+          ],
           "permissionsAlwaysAsk": {
             "alert": true,
             "badge": true,
@@ -57,10 +61,18 @@
             "provisional": true
           },
           "sound": true,
-          "sounds": ["./assets/sounds/notification1.wav"],
+          "sounds": [
+            "./assets/sounds/notification1.wav"
+          ],
           "androidMode": "default",
           "androidChannelId": "default",
           "androidChannelName": "Default Channel"
+        }
+      ],
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
         }
       ]
     ],
