--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@expo/vector-icons": "^14.0.4",
     "@hookform/resolvers": "^3.9.1",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.8.4",
     "expo": "~52.0.18",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.2",
     "expo-av": "~15.0.2",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.6",
     "expo-device": "^7.0.1",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-manipulator": "^13.0.6",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-notifications": "^0.29.11",
