--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,36 +18,36 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@expo/vector-icons": "^14.0.4",
     "@hookform/resolvers": "^3.9.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.8.4",
-    "expo": "~52.0.18",
+    "expo": "~52.0.42",
     "expo-apple-authentication": "~7.1.3",
-    "expo-auth-session": "~6.0.2",
+    "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-blur": "~14.0.1",
+    "expo-blur": "~14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.6",
-    "expo-device": "^7.0.1",
+    "expo-dev-client": "~5.0.19",
+    "expo-device": "~7.0.3",
     "expo-file-system": "^18.0.12",
-    "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.0.6",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-notifications": "^0.29.11",
-    "expo-router": "4.0.11",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.20",
     "expo-speech": "~13.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-updates": "~0.26.10",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "i18next": "^24.2.2",
@@ -60,7 +60,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.0",
     "react-i18next": "^15.4.0",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
@@ -69,9 +69,9 @@
     "react-native-purchases-ui": "^8.5.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "replicate": "^1.0.1",
@@ -84,7 +84,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
