--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
-    "expo-camera": "^16.0.18",
+    "expo-camera": "~16.0.18",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.19",
