--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-fit": "^0.21.0",
+    "react-native-health": "^1.19.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-purchases": "^8.5.0",
     "react-native-purchases-ui": "^8.5.0",
