--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -28,6 +29,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "~16.0.18",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
@@ -36,11 +38,13 @@
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-health": "^0.0.0",
     "expo-image-manipulator": "^13.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
+    "expo-sensors": "^14.0.2",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -76,6 +80,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "replicate": "^1.0.1",
+    "rn-apple-healthkit": "^0.8.0",
     "tailwindcss": "^3.4.16",
     "zod": "^3.24.1"
   },
