--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@expo/vector-icons": "^14.0.4",
     "@hookform/resolvers": "^3.9.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -29,7 +28,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
+    "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.18",
     "expo-constants": "^17.0.3",
     "expo-crypto": "~14.0.2",
