--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "HealthChat",
     "slug": "HealthChat",
-    "version": "1.0.21",
+    "version": "1.0.22",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -16,12 +16,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.healthchatdev.HealthChat",
-      "infoPlist": {
-        "NSHealthShareUsageDescription": "This app requires access to read your health data to track fitness and provide personalized insights",
-        "NSHealthUpdateUsageDescription": "This app requires permission to save health data to provide complete fitness tracking",
-        "UIBackgroundModes": ["fetch", "remote-notification"],
-        "NSHealthClinicalHealthRecordsShareUsageDescription": "This app requires permission to access health records"
-      },
+
       "entitlements": {
         "com.apple.developer.healthkit": true,
         "com.apple.developer.healthkit.access": ["health-records"]
@@ -84,7 +79,11 @@
           "androidChannelName": "Default Channel"
         }
       ],
-      "expo-font"
+      "expo-font",
+      ["@kingstinct/react-native-healthkit", {
+        "NSHealthShareUsageDescription": "This app requires access to read your health data to track fitness and provide personalized insights",
+        "NSHealthUpdateUsageDescription": "This app requires permission to save health data to provide complete fitness tracking"
+      }]
     ],
     "experiments": {
       "typedRoutes": true
