--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.0.6",
+    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
