--- a/app.json
+++ b/app.json
@@ -32,12 +32,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#000"
       },
-      "package": "com.healthchatdev.HealthChat",
-      "permissions": [
-        "android.permission.ACTIVITY_RECOGNITION",
-        "android.permission.ACCESS_FINE_LOCATION",
-        "com.google.android.gms.permission.ACTIVITY_RECOGNITION"
-      ]
+      "package": "com.healthchatdev.HealthChat"
     },
     "web": {
       "bundler": "metro",
