--- a/package.json
+++ b/package.json
@@ -27,21 +27,19 @@
     "expo": "~52.0.42",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.3",
-    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.18",
     "expo-constants": "^17.0.3",
-    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.19",
     "expo-device": "~7.0.3",
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.0.6",
-    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-modules-core": "^2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-sensors": "^14.0.2",
@@ -67,7 +65,6 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-google-fit": "^0.21.0",
     "react-native-health": "^1.19.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-purchases": "^8.5.0",
