fixed careplan for free and pro users

--- a/app.json
+++ b/app.json
@@ -17,11 +17,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.healthchatdev.HealthChat",
       "entitlements": {
-        "com.apple.developer.healthkit": true,
-        "com.apple.developer.healthkit.access": [
-          "health-records",
-          "health-records"
-        ]
+        "com.apple.developer.healthkit": true
       },
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
